[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build>=0.13.0",
    "cmake",
    "ninja; platform_system!='Windows'",
    "Cython==3.0.0a10",
    "rapidfuzz_capi==1.0.5"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"
